# cluster-normalization

./: .gitignore  README.md  pyproject.toml
datasets/: dbpedia.jsonl
runs/experiment_2/llama/imdb/layer15/: ccs_burns.csv  ccs_cluster.csv  crc_burns.csv  crc_cluster.csv  lr.csv
runs/experiment_2/llama/imdb/layer23/: ccs_burns.csv  ccs_cluster.csv  crc_burns.csv  crc_cluster.csv  lr.csv
runs/experiment_2/llama/imdb/layer31/: ccs_cluster.csv  crc_burns.csv  crc_cluster.csv  lr.csv
runs/experiment_2/llama/imdb/layer7/: ccs_burns.csv  ccs_cluster.csv  crc_burns.csv  crc_cluster.csv  lr.csv
runs/experiment_2/transformer_lense/gemma-7b/imdb/layer13/: ccs_burns.csv  ccs_cluster.csv  crc_burns.csv  crc_cluster.csv  lr.csv
runs/experiment_2/transformer_lense/gemma-7b/imdb/layer20/: ccs_burns.csv  lr.csv  (+3 more)
scripts/: calc_means.py  generate_datasets.py  generate_figures_experiment_1.ipynb  results.py
src/cluster_norm/_experiment1/: create_prompt_datasets.py  experiment.ipynb  experiment.py  harvest.py  random_words.json  random_words.py  random_words_eval.json  run.sh  run_2.sh  update_prompts.py  zero-shot.ipynb
src/cluster_norm/_experiment2/: experiment.py  harvest.py  harvest_transformerlense.py  prompts.py  run.sh  run_2.sh  run_3.sh  tests.ipynb
src/cluster_norm/_experiment3/: harvest.ipynb  prompts.jsonl  prompts.py  tests.ipynb  zero-shot.ipynb
src/cluster_norm/_experiment4/: harvest.ipynb  prompts_cc.py  prompts_tqa.jsonl  prompts_tqa.py  sandbox.ipynb  tests.ipynb  zero-shot.ipynb
src/cluster_norm/utils/: CCS.py  CRC.py  norm.py  train.py  utils.py
(+138 files in other folders)
